# Elaborato_1_PC_Giovanni_Stefanini

./: CMakeLists.txt  MeanShiftParallel.cpp  MeanShiftParallel.h  MeanShiftSeq.cpp  MeanShiftSeq.h  README.md  Utils.cpp  Utils.h  main.cpp
